fix ws
